[gd_scene load_steps=18 format=3 uid="uid://dmmwvpsouxvpv"]

[ext_resource type="Texture2D" uid="uid://d2h2rutoardr1" path="res://sprites/tornado/tornado_spritesheet.png" id="1_fec2i"]
[ext_resource type="Script" uid="uid://dxcuij1guk6e5" path="res://scenes/skills/tornado.gd" id="1_hymgt"]
[ext_resource type="Shape2D" uid="uid://d0cuc6fxx8hw7" path="res://resources/tornado_shape_pull.tres" id="3_xrveb"]
[ext_resource type="Texture2D" uid="uid://cdjo4vurbujal" path="res://sprites/tornado/protection_circle/protection_circle_001.png" id="4_ms7ra"]
[ext_resource type="Texture2D" uid="uid://b6nnel6neg6oh" path="res://sprites/tornado/protection_circle/protection_circle_002.png" id="5_lrrw7"]
[ext_resource type="Texture2D" uid="uid://xvxcfpsx4na4" path="res://sprites/tornado/protection_circle/protection_circle_003.png" id="6_modja"]
[ext_resource type="Texture2D" uid="uid://pahdlf1epjlf" path="res://sprites/tornado/protection_circle/protection_circle_004.png" id="7_vdx5d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xrveb"]
radius = 151.73505

[sub_resource type="CircleShape2D" id="CircleShape2D_x00ro"]
radius = 71.82043

[sub_resource type="Animation" id="Animation_hymgt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tornado_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("tornado_sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fec2i"]
resource_name = "default"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tornado_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_xrveb"]
resource_name = "fireballed"
length = 0.50001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tornado_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("tornado_sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0.9882353, 0.40784314, 1)]
}

[sub_resource type="Animation" id="Animation_jed8l"]
resource_name = "healed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tornado_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("tornado_sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.32049313, 0.0012809518, 0.6022583, 1)]
}

[sub_resource type="Animation" id="Animation_x00ro"]
resource_name = "thunderbolted"
length = 0.50001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tornado_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("tornado_sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 1.974, 4.3, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xrveb"]
_data = {
&"RESET": SubResource("Animation_hymgt"),
&"default": SubResource("Animation_fec2i"),
&"fireballed": SubResource("Animation_xrveb"),
&"healed": SubResource("Animation_jed8l"),
&"thunderbolted": SubResource("Animation_x00ro")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_ew3ul"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ms7ra")
}, {
"duration": 1.0,
"texture": ExtResource("5_lrrw7")
}, {
"duration": 1.0,
"texture": ExtResource("6_modja")
}, {
"duration": 1.0,
"texture": ExtResource("7_vdx5d")
}],
"loop": true,
"name": &"protection",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jed8l"]
radius = 159.99998

[node name="Tornado" type="Area2D"]
scale = Vector2(2.5, 2.5)
collision_layer = 8
collision_mask = 12
script = ExtResource("1_hymgt")

[node name="tornado_sprite" type="Sprite2D" parent="."]
position = Vector2(0, -43)
texture = ExtResource("1_fec2i")
hframes = 6

[node name="tornado_collision_damage" type="CollisionShape2D" parent="."]
position = Vector2(0, -27.999998)
scale = Vector2(0.99999994, 0.99999994)
shape = SubResource("CircleShape2D_xrveb")
debug_color = Color(0.9799941, 0, 0.38733768, 0.41960785)

[node name="tornado_collision_transform_area" type="Area2D" parent="."]
scale = Vector2(0.99999976, 0.99999976)
collision_layer = 8
collision_mask = 8

[node name="tornado_collision_transform" type="CollisionShape2D" parent="tornado_collision_transform_area"]
position = Vector2(0, -28.000004)
scale = Vector2(1.5400002, 1.5400002)
shape = SubResource("CircleShape2D_x00ro")
debug_color = Color(0.7192179, 0.48127967, 0, 0.41960785)

[node name="tornado_collision_pull_area" type="Area2D" parent="."]
scale = Vector2(0.99999964, 0.99999964)
collision_layer = 8
collision_mask = 4

[node name="tornado_collision_pull" type="CollisionShape2D" parent="tornado_collision_pull_area"]
position = Vector2(0, -28.000006)
scale = Vector2(1.0000002, 1.0000002)
shape = ExtResource("3_xrveb")
debug_color = Color(0, 0.8623122, 0.67507756, 0.41960785)

[node name="tornado_collision_knockback_area" type="Area2D" parent="."]
scale = Vector2(0.99999964, 0.99999964)
collision_layer = 8
collision_mask = 4

[node name="tornado_collision_knockback" type="CollisionShape2D" parent="tornado_collision_knockback_area"]
position = Vector2(0, -28.000006)
scale = Vector2(1.0000002, 1.0000002)
shape = ExtResource("3_xrveb")
debug_color = Color(0, 0.8623122, 0.67507756, 0.41960785)

[node name="tornado_animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xrveb")
}

[node name="tornado_collision_heal_area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 34

[node name="tornado_collision_heal" type="CollisionShape2D" parent="tornado_collision_heal_area"]
position = Vector2(0, -27.999996)
scale = Vector2(0.99999976, 0.99999976)
shape = SubResource("CircleShape2D_xrveb")
debug_color = Color(0.9799941, 0, 0.38733768, 0.41960785)

[node name="tornado_collision_heal_protection_area" type="Area2D" parent="."]
collision_layer = 34
collision_mask = 8

[node name="tornado_heal_protection_animation" type="AnimatedSprite2D" parent="tornado_collision_heal_protection_area"]
position = Vector2(0, -28)
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_ew3ul")

[node name="tornado_collision_heal_protection" type="CollisionShape2D" parent="tornado_collision_heal_protection_area"]
position = Vector2(0, -28)
shape = SubResource("CircleShape2D_jed8l")
disabled = true
